media queries, pictures, navbar/hamburger, article

--- a/code/index.html
+++ b/code/index.html
@@ -13,39 +13,67 @@
 
 <body>
   <header>
-    <img src="http://clipart-library.com/data_images/192383.jpg" alt="">
+    <img src="https://publicdomainvectors.org/photos/Teapot.png" alt="">
     <h1>News Site</h1>
     <div class="hamburger">
       <div></div>
       <div></div>
       <div></div>
     </div>
+    <nav>
+      <a href="#">Community</a>
+      <a href="#">Shop</a>
+      <a href="#">Subscribe</a>
+    </nav>
   </header>
 
   <section class="big-news">
     <figure>
-      <img src="rock.jpg" alt="">
+      <img src="tea0.jpg" alt="">
       <figcaption>A rock</figcaption>
     </figure>
     <div class="big-news-text">
       <h2>Big news headline</h2>
       <article>
-        Read more...
+        <p>Read more...</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae eaque sint laboriosam corporis, cumque
+          quae consequatur possimus blanditiis, harum odit tempore. Odit beatae dignissimos exercitationem numquam quas
+          velit omnis expedita.</p>
       </article>
     </div>
   </section>
 
   <section class="small-news">
     <div>
-      <img src="rock.jpg" alt="">
+      <img src="tea1.jpg" alt="">
       <h3>Small news headline</h3>
     </div>
     <div>
-      <img src="rock.jpg" alt="">
+      <img src="tea2.jpg" alt="">
       <h3>Small news headline</h3>
     </div>
     <div>
-      <img src="rock.jpg" alt="">
+      <img src="tea3.jpg" alt="">
+      <h3>Small news headline</h3>
+    </div>
+    <div>
+      <img src="tea4.jpg" alt="">
+      <h3>Small news headline</h3>
+    </div>
+    <div>
+      <img src="tea5.jpg" alt="">
+      <h3>Small news headline</h3>
+    </div>
+    <div>
+      <img src="tea6.jpg" alt="">
+      <h3>Small news headline</h3>
+    </div>
+    <div>
+      <img src="tea7.jpg" alt="">
+      <h3>Small news headline</h3>
+    </div>
+    <div>
+      <img src="tea8.jpg" alt="">
       <h3>Small news headline</h3>
     </div>
   </section>
