Added code to the general structure (html, css), updated footer and added svg-files

--- a/code/index.html
+++ b/code/index.html
@@ -6,17 +6,17 @@
     <title>ALVA</title>
     <link rel="stylesheet" href="./style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <header>
-        <img class="logo" src="#" alt="Alva logo"> <!-- add img src -->
-        <p>ALVA</p>
+        <img class="logo" src="./star.svg" alt="Alva logo"> <!-- add img src -->
+        <h1>A L V A</h1>
         <nav> 
-            <a href="#">ABOUT</a>
-            <a href="#">ARCHIVE</a>
-            <a href="#">CONTACT</a>
+            <a href="#">About</a>
+            <a href="#">Archive</a>
+            <a href="#">Contact</a>
         </nav>
         <div class="hamburger">
           <div></div>
@@ -24,36 +24,77 @@
           <div></div>
         </div>
         <div class="social-media">
-          <a href="#">
-            <img src="#" alt="Facebook"> <!-- add img src -->
-          </a>
-          <a href="#">
-            <img src="#" alt="Instagram"> <!-- add img src -->
-          </a>
-          <a href="#">
-            <img src="#" alt="Youtube"> <!-- add img src -->
-          </a>
+          <a href="#"><img src="./facebook.svg" alt="Facebook"></a>
+          <a href="#"><img src="./instagram.svg" alt="Instagram"></a>
+          <a href="#"><img src="./youtube.svg" alt="Youtube"></a>
         </div>
     </header>
 
     <section class="big-news">
-      <img class="big-news-image" src="#" alt=""> <!-- set alt to the image -->
-      <div class="big-news-text"></div>
+      <section class="big-news-container">
+        <img class="big-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
+        <div class="big-news-text">
+          <h2>Inside the head of Alva</h2>
+        </div>
+      </section>
     </section>
 
     <section class="other-news">
-      <div class="other-news-image"></div>
-      <div class="other-news-image"></div>
-      <div class="other-news-image"></div>
-      <div class="other-news-image"></div>
-      <div class="other-news-image"></div>
-      <div class="other-news-image"></div>
-      <div class="other-news-image"></div>
-      <div class="other-news-image"></div>
+      <section class="other-news-container">
+        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
+        <div class="other-news-text">
+      </section>
+      <section class="other-news-container">
+        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
+        <div class="other-news-text">
+      </section>
+      <section class="other-news-container">
+        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
+        <div class="other-news-text">
+      </section>
+      <section class="other-news-container">
+        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
+        <div class="other-news-text">
+      </section>
+      <section class="other-news-container">
+        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
+        <div class="other-news-text">
+      </section>
+      <section class="other-news-container">
+        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
+        <div class="other-news-text">
+      </section>
+      <section class="other-news-container">
+        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
+        <div class="other-news-text">
+      </section>
+      <section class="other-news-container">
+        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
+        <div class="other-news-text">
+      </section>
     </section>
 
     <footer>
-      <div class="footer"></div>
+      <div class="footer">
+        <div class="contact-info">
+          <a href="#">About</a> 
+          <a href="#">Archive</a>
+          <a href="#">Contact</a>
+          <a href="#">
+            <img src="./facebook.svg" alt="Facebook"> 
+            Facebook
+          </a>
+          <a href="#">
+            <img src="./instagram.svg" alt="Instagram"> 
+            Instagram 
+          </a>
+          <a href="#">
+            <img src="./youtube.svg" alt="Youtube"> 
+            Youtube 
+          </a>
+          <a href="mailto:someone@example.com">Email: info@alva.se</a>
+        </div>
+      </div>
     </footer>
 
   </body>
