Added site bakground svg, layout changes to header and added divs to header

--- a/code/index.html
+++ b/code/index.html
@@ -9,17 +9,19 @@
   </head>
   <body>
     <header>
-      <div class=logo>
-        <img src="logo.svg">
-      </div>
-      
-      Crafty Ideas E-zine
+      <div class="logo-and-title">
 
+        <div class=logo>
+          <img src="logo.svg">
+        </div>
+      
+        Crafty Ideas E-zine
+      </div>
       <nav>
-        <a href="/html/">HTML</a> |
-        <a href="/css/">CSS</a> |
-        <a href="/js/">JavaScript</a> |
-        <a href="/python/">Python</a>
+        <a class=navlink href="/html/">Home</a> |
+        <a class=navlink href="/css/">About</a> |
+        <a class=navlink href="/js/">Contact</a> |
+        <a class=navlink href="/python/">Contribute</a>
       </nav>
 
       <!-- Some kind of logo and navbar -->
