--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
 <head>
   <meta charset="ut-8" />
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="wrapper">
   <header>
     <nav>
       <a href="contact.html" target="blank">contact</a>
@@ -20,7 +21,7 @@
         <button class="search-button"><img src="../pictures/magnify.png"></button>
       </div>
     </nav>
-    <div class="header-container">
+    <div class="header-wrapper">
       <div class="meteor"></div>
       <h1>SPACE NEWS</h1>
     </div>
@@ -36,185 +37,185 @@
         rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi minima!
         <br>
         <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque nobis quas rerum. Eligendi quo vero,
-        iusto fugiat, tempore, possimus sunt tempora cumque maxime minus a porro esse! Aspernatur, voluptates.<br>
+        iusto fugiat, tempore, possimus sunt tempora cumque maxime minus a porro esse! Aspernatur, voluptates.<br><br>
         <a href="" target="blank">&gt; Keep reading &lt;</a>
       </p>
     </container>
   </section>
 
   <section class="small-news">
-    <div class="grid-container">
+    <div class="grid-wrapper">
       <container class="small-img-container">
         <img src="../pictures/SLSmegarocket.jpg">
       </container>
     </div>
-    <div class="grid-container">
+    <div class="grid-wrapper">
       <container class="small-text-container">
         <h3>NASA test-fires SLS engines</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
-          <a href="" target="blank">&gt;</a>
+          <a href="" target="blank">More -&gt;</a>
         </p>
       </container>
     </div>
-    <div class="grid-container">
+    <div class="grid-wrapper">
       <container class="small-img-container">
         <img src="../pictures/WilliamThornton.jpg">
       </container>
     </div>
-    <div class="grid-container">
+    <div class="grid-wrapper">
       <container class="small-text-container">
         <h3>Astronaut William Thornton dead</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
-          <a href="" target="blank">&gt;</a>
+          <a href="" target="blank">More -&gt;</a>
         </p>
       </container>
     </div>
-    <div class="grid-container">
-    <container class="small-img-container">
-      <img src="../pictures/nicholaspatrick.jpg">
-    </container>
-    </div>
-
-    <div class="grid-container">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">&gt;</a>
-        </p>
-      </container>
-    </div>
-    <div class="grid-container">
-      <container class="small-img-container">
-        <img src="../pictures/shuttle.jpg">
-      </container>
-    </div>
-    <div class="grid-container">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat <br><a href="" target="blank">&gt;</a>
-        </p>
-      </container>
-    </div>
-    <div class="grid-container">
-      <container class="small-img-container">
-        <img src="../pictures/spiral.jpg">
-      </container>
-    </div>
-    <div class="grid-container">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
-        </p>
-      </container>
-    </div>
-    <div class="grid-container">
-      <container class="small-img-container">
-        <img src="../pictures/tracycaldwell.jpg">
-      </container>
-    </div>
-    <div class="grid-container">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
-        </p>
-      </container>
-    </div>
-    <div class="grid-container">
-    <container class="small-img-container">
-      <img src="../pictures/SLSmegarocket.jpg">
-    </container>
-  </div>
-    <div class="grid-container">
-
-      <container class="small-text-container">
-        <h3>NASA test-fires SLS engines</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
-          <a href="" target="blank">&gt;</a>
-        </p>
-      </container>
-
-    </div>
-    <div class="grid-container">
-      <container class="small-img-container">
-        <img src="../pictures/WilliamThornton.jpg">
-      </container>
-    </div>
-    <div class="grid-container">
-      <container class="small-text-container">
-        <h3>Astronaut William Thornton dead</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
-          <a href="" target="blank">&gt;</a>
-        </p>
-      </container>
-    </div>
-    <div class="grid-container">
-      <container class="small-img-container">
-        <img src="../pictures/sun.jpg">
-      </container>
-    </div>
-    <div class="grid-container">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">&gt;</a>
-        </p>
-      </container>
-    </div>
-    <div class="grid-container">
+    <div class="grid-wrapper">
       <container class="small-img-container">
         <img src="../pictures/nicholaspatrick.jpg">
       </container>
     </div>
-    <div class="grid-container">
+    <div class="grid-wrapper">
       <container class="small-text-container">
         <h3>Small news</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat <br><a href="" target="blank">&gt;</a>
+          eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">More -&gt;</a>
         </p>
       </container>
     </div>
-    <div class="grid-container">
-    <container class="small-img-container">
-      <img src="../pictures/ISS640px.jpg">
-    </container>
+    <div class="grid-wrapper">
+      <container class="small-img-container">
+        <img src="../pictures/shuttle.jpg">
+      </container>
     </div>
-    <div class="grid-container">
-    <container class="small-text-container">
-      <h3>Small news</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
-      </p>
-    </container>
+    <div class="grid-wrapper">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat <br><a href="" target="blank">More -&gt;</a>
+        </p>
+      </container>
     </div>
-    <div class="grid-container">
-    <container class="small-img-container">
-      <img src="../pictures/columbia.jpg">
-    </container>
+    <div class="grid-wrapper">
+      <container class="small-img-container">
+        <img src="../pictures/spiral.jpg">
+      </container>
     </div>
-    <div class="grid-container">
-    <container class="small-text-container">
-      <h3>Small news</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
-      </p>
-    </container>
+    <div class="grid-wrapper">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">More -&gt;</a>
+        </p>
+      </container>
     </div>
-    </container>
+    <div class="grid-wrapper">
+      <container class="small-img-container">
+        <img src="../pictures/tracycaldwell.jpg">
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">More -&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-img-container">
+        <img src="../pictures/SLSmegarocket.jpg">
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-text-container">
+        <h3>NASA test-fires SLS engines</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
+          <a href="" target="blank">More -&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-img-container">
+        <img src="../pictures/WilliamThornton.jpg">
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-text-container">
+        <h3>Astronaut William Thornton dead</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
+          <a href="" target="blank">More -&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-img-container">
+        <img src="../pictures/sun.jpg">
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">More -&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-img-container">
+        <img src="../pictures/nicholaspatrick.jpg">
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat <br><a href="" target="blank">More -&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-img-container">
+        <img src="../pictures/ISS640px.jpg">
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">More -&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-img-container">
+        <img src="../pictures/columbia.jpg">
+      </container>
+    </div>
+    <div class="grid-wrapper">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">More -&gt;</a>
+        </p>
+      </container>
+    </div>
+    <a class="top-button" href="#top">^<br>^</a>
   </section>
+  
+
 
   <footer>
-    <container class="footer-container">
-      <div class="footer-text-container">
+    <div class="footer-wrapper">
+      <contaier class="footer-text-container">
         <p>&copy; Pauline Andersson 2021</p>
-      </div>
-      <div class="footer-img-container">
+      </contaier>
+      <container class="footer-img-container">
         <img src="../pictures/logo.svg">
-      </div>
-    </container>
+      </contaier>
+  </div >
   </footer>
+</div>
 </body>
 
 </html>
