hover effects on image links

--- a/code/index.html
+++ b/code/index.html
@@ -18,11 +18,11 @@
         </div>
 
         <div class="nav">
-          <div class="nav-item"><a href="">About</a></div>
-          <div class="nav-item"><a href="">Archieve</a></div>
-          <div class="nav-item"><a href="">Forum</a></div>
-          <div class="nav-item"><a href="">Local</a></div>
-          <div class="nav-item"><a href="">Contact</a></div>
+          <div class="nav-item"><a href="#">About</a></div>
+          <div class="nav-item"><a href="#">Archieve</a></div>
+          <div class="nav-item"><a href="#">Forum</a></div>
+          <div class="nav-item"><a href="#">Local</a></div>
+          <div class="nav-item"><a href="#">Contact</a></div>
        </div>
       </div>
     </header>
@@ -33,11 +33,11 @@
     <section class="big-news">
       <!-- The big news content -->
         <div class="big-news-item1">
-          <img id="img-big" src="https://images.unsplash.com/photo-1499728603263-13726abce5fd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="image with phrase mindfulness" />
+          <a href="#"><img id="img-big" src="https://images.unsplash.com/photo-1499728603263-13726abce5fd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="image with phrase mindfulness" /></a>
         </div>
     
         <div class="big-news-item2">
-          <a href=""><h1 id="big-news-h1">Healthboost? <br>-positive effects of knitting</h1></a>
+          <a href="#"><h1 id="big-news-h1">Healthboost? <br>-positive effects of knitting</h1></a>
           <p id="big-news-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. A vel, similique inventore necessitatibus eaque dolores. Molestiae quae aliquam voluptates totam neque alias asperiores, numquam ab, quod tempore, voluptatum labore voluptas.</p>
         </div>
     </section>
@@ -47,26 +47,26 @@
     <section class="other-news">
       <!-- The other news -->
       <div class="other-news-item">
-        <img id="first" src="https://images.unsplash.com/photo-1554168396-aab725fa9d34?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80" />
-        <a href=""><h3>Colorpicking</h3></a>
+        <a href="#"><img id="first" src="https://images.unsplash.com/photo-1554168396-aab725fa9d34?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80" /></a>
+        <a href="#"><h3>Colorpicking</h3></a>
       </div>
       <div class="other-news-item">
-        <img id="second" src="https://images.unsplash.com/photo-1562469162-c17fc5155156?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" />
-        <a href=""><h3>What's your next project?</h3></a>
+        <a href="#"><img id="second" src="https://images.unsplash.com/photo-1562469162-c17fc5155156?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" /></a>
+        <a href="#"><h3>What's your next project?</h3></a>
       </div>
       <div class="other-news-item">
-        <img id="third" src="https://images.unsplash.com/photo-1513890333407-6f85205e8ef2?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1500&q=80" />
-        <a href=""><h3>Yarnweight and structure</h3></a>
+        <a href="#"><img id="third" src="https://images.unsplash.com/photo-1513890333407-6f85205e8ef2?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1500&q=80" /></a>
+        <a href="#"><h3>Yarnweight and structure</h3></a>
       </div>
       <div class="other-news-item">
-        <img id="fourth" src="https://images.unsplash.com/photo-1569745637705-76458b6bae7d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" />
-        <a href=""><h3>Tools: Now is the time to gear up!</h3></a>
+        <a href="#"><img id="fourth" src="https://images.unsplash.com/photo-1569745637705-76458b6bae7d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" /></a>
+        <a href="#"><h3>Tools: Now is the time to gear up!</h3></a>
       </div>
     </section>
   
     <footer class="footer">
       <p>Knitty News | &#169 2021</p>
     </footer>
-    
+
   </body>
 </html>
