--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Project 2: Succulent world</title>
+    <link rel="stylesheet" href="./style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <nav>
+        <ul>
+          <li class="logo">Succulent World</li>
+          <li class="items"><a href= "#">Home</a></li>
+          <li class="items"><a href= "#">About</a></li>
+          <li class="items"><a href= "#">Gallery</a></li>
+          <li class="items"><a href= "#">Contact</a></li>
+             <!--NEW -->
+        </ul>
+      </nav>
     </header>
 
     <section class="big-news">
