fixed a drop-down menu for mobile version ('checkbox hack')

--- a/code/index.html
+++ b/code/index.html
@@ -9,18 +9,27 @@
 </head>
 
 <body>
-  <div class="wrapper">
   <header>
-    <nav>
-      <a href="contact.html" target="blank">contact</a>
-      <a href="contact.html" target="blank">about</a>
-      <a href="contact.html" target="blank">sign up</a>
-      <a href="contact.html" target="blank">login</a>
+         <nav>
+          <input type="checkbox" id="checkbox" >
+          <label for="checkbox"><i class="menu-button"></i>
+          </label>
+        <div class="menu-content"> 
+          <a href="contact.html" target="blank">contact</a>
+          <a href="contact.html" target="blank">about</a>
+          <a href="contact.html" target="blank">sign up</a>
+          <a href="contact.html" target="blank">login</a>
+        </div>
+        <input type="checkbox" id="searchbox" >
+        <label for="searchbox"><i class="search-button">
+          <img src="../pictures/magnify.png"></i></label>
       <div class="searchbar">
         <input type="text" placeholder="Search..">
-        <button class="search-button"><img src="../pictures/magnify.png"></button>
+        
       </div>
+    
     </nav>
+
     <div class="header-wrapper">
       <div class="meteor"></div>
       <h1>SPACE NEWS</h1>
@@ -215,7 +224,6 @@
       </contaier>
   </div >
   </footer>
-</div>
 </body>
 
 </html>
