--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: Succulent world</title>
+    <title>Push 2: Project 2: Succulent world</title>
     <link rel="stylesheet" href="./style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
@@ -21,13 +21,19 @@
         </ul>
       </nav>
     </header>
-
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="cards-container">
+      <!--the big news content-->
+      <div class="main-article">
+        <a href="#">
+          <div class="main-article-image">
+            <img src="img/img-0.jpg" alt="succulents image"
+          </div>
+          <div class="main-article-text">
+            <h1>Main article</h1>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries.</p>
+          </div>
+        </a>
+      </div>
     </section>
-
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
-</html>
+    </body>
+  </html>
