--- a/code/index.html
+++ b/code/index.html
@@ -10,27 +10,27 @@
 
 <body>
   <header>
-         <nav>
-          <input type="checkbox" id="checkbox" >
-          <label for="checkbox"><i class="menu-button"></i>
-          </label>
-        <div class="menu-content"> 
-          <a href="contact.html" target="blank">contact</a>
-          <a href="contact.html" target="blank">about</a>
-          <a href="contact.html" target="blank">sign up</a>
-          <a href="contact.html" target="blank">login</a>
-        </div>
-        <input type="checkbox" id="searchbox" >
-        <label for="searchbox"><i class="search-button">
-          <img src="../pictures/magnify.png"></i></label>
+    <div class="header-wrapper">
+    <nav>
+      <input type="checkbox" id="checkbox" >
+      <label for="checkbox"><i class="menu-button"></i>
+      </label>
+      <div class="menu-content"> 
+        <a href="contact.html" target="blank">contact</a>
+        <a href="contact.html" target="blank">about</a>
+        <a href="contact.html" target="blank">sign up</a>
+        <a href="contact.html" target="blank">login</a>
+      </div>
+      <div class="search-content">
+      <input type="checkbox" id="searchbox" >
+      <label for="searchbox">
+        <img class="search-button" src="../pictures/magnify.png">
+      </label>
       <div class="searchbar">
         <input type="text" placeholder="Search..">
-        
       </div>
-    
+    </div>
     </nav>
-
-    <div class="header-wrapper">
       <div class="meteor"></div>
       <h1>SPACE NEWS</h1>
     </div>
