Created some flexboxes, small news and a desktopbox. Added a hover animation to SN

--- a/code/index.html
+++ b/code/index.html
@@ -9,14 +9,32 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img src="logo.svg" >      
     </header>
+    <div class="desktop-box">
+
+    <h1>Big News!</h1>
 
     <section class="big-news">
       <!-- The big news content -->
     </section>
-
+    <section class="small-news">
+      <a href="#">
+    <img src="logo.svg" alt="Photo of a">
+    <p>Some image text</p>
+      </a>
+      <a href="#">
+    <img src="logo.svg" alt="Photo of a">
+    <p>Some image text</p>
+      </a>
+      <a href="#">
+    <img src="logo.svg" alt="Photo of a">
+    <p>Some image text</p>
+       </a>
+   </section>
     <section class="">
       <!-- The other news  -->
     </section>
+  </div>
   </body>
 </html>
