Created separate html files for hamburger menu, navbar links and each article. Styled them in the same style as index.html. Added link to go back to index.html from separate html pages.

--- a/code/index.html
+++ b/code/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dentnews</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
@@ -10,7 +11,7 @@
     <header>
       <!-- Some kind of logo and navbar -->
       <div class="hamburger"> 
-        <a href="#">
+        <a href="hamburger.html">
           <div></div>
           <div></div>
           <div></div>
@@ -18,15 +19,15 @@
       </div>
       <img src="photos/dentnews.png" alt="Dentnews logo">
       <nav>
-        <a href="#">BREAKING NEWS</a> <!--Add anchor to breaking news page->
-        <a href="#">ABOUT</a> <!--Add anchor to about.html-->
-        <a href="#">CONTACT</a> <!--Add anchor to contact page-->
+        <a href="article1.html">BREAKING NEWS</a> <!--Add anchor to breaking news page-->
+        <a href="about.html">ABOUT</a> <!--Add anchor to about.html-->
+        <a href="contact.html">CONTACT</a> <!--Add anchor to contact page-->
       </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
-      <a href="#"> <!--Add anchor to article page-->
+      <a href="article1.html"> <!--Add anchor to article page-->
         <img src="photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
         <div>
           <p>BREAKING NEWS</p> <!--Add span to style?-->
@@ -39,7 +40,7 @@
     <section class="news-container">
       <!-- The other news  -->
       <div class="news">
-        <a href="#"> <!--Add anchor to separate article page-->
+        <a href="article2.html"> <!--Add anchor to separate article page-->
           <img src="photos/implants.jpg" alt="Picture of a dental implant">
           <h3>Dental implants - what's new on the market?</h3>
           <p>Here are the latest news regarding dental implants.</p>
@@ -47,7 +48,7 @@
       </div>
 
       <div class="news">
-        <a href="#"> <!--Add anchor to separate article page-->
+        <a href="article3.html"> <!--Add anchor to separate article page-->
           <img src="photos/invisalign.jpg" alt="Picture of girl putting on invisalign braces">
           <h3>Pros and cons of Invisalign braces</h3>
           <p>Virtually invisible. Unlike traditional braces, the Invisalign system
@@ -56,7 +57,7 @@
       </div>
 
       <div class="news">
-        <a href="#"> <!--Add anchor to separate article page-->
+        <a href="article4.html"> <!--Add anchor to separate article page-->
           <img src="photos/child.jpg" alt="Picture of a young child holding a toothbrush">
           <h3>New guidelines in pediatric dentistry from January 2021</h3>
           <p>Read the new guidelines.</p>
@@ -64,7 +65,7 @@
       </div>
 
       <div class="news">
-        <a href="#"> <!--Add anchor to separate article page-->
+        <a href="article5.html"> <!--Add anchor to separate article page-->
           <img src="photos/dentalclinic.jpg" alt="Picture of a dental clinic">
           <h3>COVID-19 - one year later</h3>
           <p>How has the pandemic affected small private practices around the country?</p>
@@ -72,7 +73,7 @@
       </div>
 
       <div class="news">
-        <a href="#"> <!--Add anchor to separate article page-->
+        <a href="article6.html"> <!--Add anchor to separate article page-->
           <img src="photos/electricscooter.jpg" alt="Picture of an electric scooter">
           <h3>High increase of dental traumas due to the use of electric scooters</h3>
           <p>Emergency clinics have seen a high increase of dental traumas since the broad launch
@@ -81,7 +82,7 @@
       </div>
 
       <div class="news">
-        <a href="#"> <!--Add anchor to separate article page-->
+        <a href="article7.html"> <!--Add anchor to separate article page-->
           <img src="photos/humble.jpg" alt="Picture of toothbrushed from Humble Co">
           <h3>Humble Co</h3>
           <p>For healthier people, on a healthier planet. Humble Co is leading an eco-friendly
@@ -90,13 +91,12 @@
       </div>
 
       <div class="news">
-        <a href="#"> <!--Add anchor to separate article page-->
+        <a href="article8.html"> <!--Add anchor to separate article page-->
           <img src="photos/electrictoothbrush.jpg" alt="Picture of electric toothbrushes">
           <h3>Top 10 best electric toothbrushes in 2021</h3>
           <p>Read the test here.</p>
         </a>
       </div>
-
 
     </section>
   </body>
