add some hover effects and some restructuring of the css

--- a/code/index.html
+++ b/code/index.html
@@ -99,14 +99,14 @@
         </div>
         <div class="text">
           <h1>
-            Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.          </h1>
+            Guinea pig, (Cavia porcellus), a domesticated species of South American rodent belonging to the cavy family (Caviidae).
           </h1>
           <p>
-            Prospect of Pardons in Final Days Fuels Market to Buy Access to Trump
+            It resembles other cavies in having a robust body with short limbs, large head and eyes, and short ears. The feet have hairless soles and short sharp claws. There are four toes on the forefeet and three on the hind feet. Several breeds of domesticated guinea pigs exist, which are sometimes grouped by coat texture and hair length. The term guinea pig is also used colloquially to refer to a person who serves as a test subject in an experiment.
           </p>
         </div>
         <div class="image">
-          <img src="/code/resources/raoul-droog-yMSecCHsIBc-unsplash.jpg" alt="image of a kitten">
+          <img src="/code/resources/clover_truff1.jpg" alt="image of Dipper the guinea pig. Photo by the great Kathleen Rogers">
         </div>
         <!-- <div class="text">
           <h1>
@@ -120,6 +120,6 @@
     </main>
     <div class="divider"></div>
     <!-- <div class="divider"></div> -->
-    <footer></footer>
-    </body>
+    <footer>This is the footer!</footer>
+  </body>
 </html>
