styled breaking news text. Aligned text to the left in tablet and desktop view. Changed layout to flex direction row in desktop view under media queries and adjusted image width.

--- a/code/index.html
+++ b/code/index.html
@@ -30,7 +30,7 @@
       <a href="article1.html"> <!--Add anchor to article page-->
         <img src="photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
         <div>
-          <p>BREAKING NEWS</p> <!--Add span to style?-->
+          <p><span class="breaking-news">BREAKING NEWS</span></p> <!--Add span to style?-->
           <h1>Dental clinics not affected by the new pandemic law.</h1>
           <p>What you need to know regarding the new law.</p>
         </div>
