add content and basic structure

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,104 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Fitness trends for 2021</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <div class="navbar">
+      <a href="#">Home</a>
+      <a href="#">The Big News</a>
+      <a href="#">Other News</a>
+      <a href="#">xxxx</a>
+    </div>
+
+    <img src="logo.svg" alt="Technigo logo">
+
+
+    <h1>Big news today!</h1>
+    <!-- Some kind of logo and navbar -->
+  </header>
+
+  <section class="big-news">
+    <div class="main-news">
+      <img src="steps.jpg" alt="Steps image">
+      <h2>some big news title</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac sed
+        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at, pharetra
+        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi. Fusce euismod viverra lacus, non ultrices
+        enim. Suspendisse feugiat rhoncus velit nec ullamcorper. Donec rutrum eleifend massa in pellentesque. Praesent
+        est ligula, fringilla a diam id, aliquet dapibus nunc. Morbi sapien enim, cursus ut nisi non, ullamcorper
+        lobortis justo. Nullam tempor risus leo, sit amet tristique est pellentesque maximus. Morbi venenatis
+        ullamcorper rhoncus.</p>
+    </div>
+    <!-- The big news content -->
+  </section>
+
+  <section class="other-news">
+    <!-- The other news  -->
+
+    <div class="news-card">
+      <img src="onlinetraining.jpg" alt="Online training image">
+      <h3>some title</h3>
+    </div>
+
+    <div class="news-card">
+      <img src="wearable.jpg" alt="">
+      <h3>some title</h3>
+    </div>
+
+    <div class="news-card">
+      <img src="" alt="">
+      <h3>some title</h3>
+    </div>
+
+    <div class="news-card">
+      <img src="" alt="">
+      <h3>some title</h3>
+    </div>
+
+    <div class="news-card">
+      <img src="" alt="">
+      <h3>some title</h3>
+    </div>
+
+    <div class="news-card">
+      <img src="" alt="">
+      <h3>some title</h3>
+    </div>
+
+    <div class="news-card">
+      <img src="" alt="">
+      <h3>some title</h3>
+    </div>
+
+    <div class="news-card">
+      <img src="" alt="">
+      <h3>some title</h3>
+    </div>
+
+    <div class="news-card">
+      <img src="" alt="">
+      <h3>some title</h3>
+    </div>
+
+    <div class="news-card">
+      <img src="" alt="">
+      <h3>some title</h3>
+    </div>
+
+  </section>
+  <footer>
+    <a href="#">Here you can find more information</a>
+  </footer>
+
+</body>
+
 </html>
