--- a/code/index.html
+++ b/code/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css"/>
     <script src="https://kit.fontawesome.com/4bfe1de3df.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&family=Indie+Flower&display=swap" rel="stylesheet">    <title>XOXO Magazine</title>
-    <!-- dont forget the meta tag for responsiveness -->
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&family=Indie+Flower&display=swap" rel="stylesheet">    
+    <title>XOXO Magazine</title>
   </head>
   <body>  
-      <!-- Sign up banner -->
     <div class="banner">
       <marquee behavior="alternate" direction="left"><a href="">Sign up for more beaty & fashion news</a></marquee>
     </div> 
 
-        <!-- Navbar -->
     <header class="menu">
       <section class="menu-icon">
         <div></div>
@@ -33,9 +33,7 @@
         </ul>
       </nav>
     </header>  
-
-   
-      <!-- The big news content -->
+  
     <article class="big-news">   
       <div class="img-container">
         <div class="polaroid image1" polaroid-caption="#Chanel">
@@ -47,66 +45,71 @@
         <h1>The new <span style="color:#FF13A7;">CHANEL</span> fragrance is here!</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-    </article>
+    </article> 
 
-
-      <!-- The other news  -->
     <h1 id="news-header">All the latest <span style="color:#FF13A7;">news</span></h1>
-    <article class="grid-container">
-
-      <div class="item">
+    <section class="grid-container">
+      <article class="item">
         <img class="image" src="Images/img1.jpeg" alt="Image">
-          <div class="img-description">
-            <p class="text">Testar</p>
-          </div>
-      </div>
+        <div class="img-description">
+          <a href=""><p class="text">Read more</p></a>
+        </div>
+        <h3>Best makeup brushes and how you keep them cleen</h3>
+        <h5>16 April, 2021</h5>
+      </article>
 
-      <div class="item">
+      <article class="item">
         <img class="image" src="Images/img2.jpeg" alt="Image">
-          <div class="img-description">
-            <p class="text">Testar</p>
-          </div>
-      </div>
+        <div class="img-description">
+          <a href=""><p class="text">Read more</p></a>
+        </div>
+        <h3>What every magazin is talking about right now</h3>
+        <h5>13 April, 2021</h5>
+      </article>
 
-      <div class="item">
+      <article class="item">
         <img class="image" src="Images/img3.jpeg" alt="Image">
-          <div class="img-description">
-            <p class="text">Testar</p>
-          </div>
-      </div>
+        <div class="img-description">
+          <a href=""><p class="text">Read more</p></a>
+        </div>
+        <h3>Bobbo Brown is the winner for the best bronzer in 2020</h3>
+        <h5>20 Mars, 2021</h5>
+      </article>
 
-      <div class="item">
+      <article class="item">
         <img class="image" src="Images/img4.jpeg" alt="Image">
-          <div class="img-description">
-            <p class="text">Testar</p>
-          </div>
-      </div>
+        <div class="img-description">
+          <a href=""><p class="text">Read more</p></a>
+        </div>
+        <h3>Yoga is the most popular goal for 2021 and here is why</h3>
+        <h5>30 January, 2021</h5>
+      </article>
 
-      <div class="item">
+      <article class="item">
         <img class="image" src="Images/img5.jpeg" alt="Image">
-          <div class="img-description">
-            <p class="text">Testar</p>
-          </div>
-      </div>
+        <div class="img-description">
+          <a href=""><p class="text">Read more</p></a>
+        </div>
+        <h3>Nail colors for summer 2021 and post corona</h3>
+        <h5>29 January, 2021</h5>
+      </article>
 
-      <div class="item">
+      <article class="item">
         <img class="image" src="Images/img6.jpeg" alt="Image">
-          <div class="img-description">
-            <p class="text">Testar</p>
-          </div>
-      </div>
-    </article>
+        <div class="img-description">
+          <a href=""><p class="text">Read more</p></a>
+        </div>
+        <h3>Shoping on Drottninggatan or online? Here is what everyone prefers</h3>
+        <h5>16 April, 2021</h5>
+      </article>
+    </section>
 
-
-      <!--Direction icon-->
     <div class="direction-icon text-center">
       <a id="star" href="">
         <i class="fas fa-angle-double-up fa-2x"></i>
       </a>   
     </div>   
 
-
-      <!--Footer-->
     <footer class="footer">
       <div class="icons">
         <a href=""><i class="fab fa-facebook-square fa-2x"></i></a>
